// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthPassword.svelte > should render email/password auth 1`] = `
<div>
  <!---->
  <input-field
    class="flex flex-col input-email   empty"
  >
    <label
      for="email"
    >
      email
    </label>
    <!---->
     
    <field
      aria-label="email"
      class="flex w-full flex-row items-center"
    >
      <rk-icon
        aria-label="i-auth-email"
        data-tag="icon"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="i-auth-email"
        />
      </rk-icon>
      <!---->
       
      <!---->
       
      <!---->
      <input
        autocomplete="on"
        id="email"
        name="email"
        type="email"
      />
      
      <!---->
       
      <!---->
    </field>
     
    <!---->
  </input-field>
  <!---->
   
  <input-field
    class="flex flex-col input-password   empty"
  >
    <label
      for="password"
    >
      Password
    </label>
    <!---->
     
    <field
      aria-label="Password"
      class="flex w-full flex-row items-center"
    >
      <rk-icon
        aria-label="i-auth-password"
        data-tag="icon"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="i-auth-password"
        />
      </rk-icon>
      <!---->
       
      <!---->
       
      <!---->
      <input
        id="password"
        name="password"
        type="password"
      />
      
      <!---->
       
      <!---->
    </field>
     
    <!---->
  </input-field>
  <!---->
   
  <button
    class="col-start-3 text-center h-10 mt-4 bg-primary text-white"
  >
    Sign in
  </button>
  
</div>
`;

exports[`AuthPassword.svelte > should render phone/password auth 1`] = `
<div>
  <!---->
  <input-field
    class="flex flex-col input-phone   empty"
  >
    <label
      for="phone"
    >
      phone
    </label>
    <!---->
     
    <field
      aria-label="phone"
      class="flex w-full flex-row items-center"
    >
      <rk-icon
        aria-label="i-auth-phone"
        data-tag="icon"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="i-auth-phone"
        />
      </rk-icon>
      <!---->
       
      <!---->
       
      <!---->
      <input
        autocomplete="on"
        id="phone"
        name="phone"
        type="tel"
      />
      
      <!---->
       
      <!---->
    </field>
     
    <!---->
  </input-field>
  <!---->
   
  <input-field
    class="flex flex-col input-password   empty"
  >
    <label
      for="password"
    >
      Password
    </label>
    <!---->
     
    <field
      aria-label="Password"
      class="flex w-full flex-row items-center"
    >
      <rk-icon
        aria-label="i-auth-password"
        data-tag="icon"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="i-auth-password"
        />
      </rk-icon>
      <!---->
       
      <!---->
       
      <!---->
      <input
        id="password"
        name="password"
        type="password"
      />
      
      <!---->
       
      <!---->
    </field>
     
    <!---->
  </input-field>
  <!---->
   
  <button
    class="col-start-3 text-center h-10 mt-4 bg-primary text-white"
  >
    Sign in
  </button>
  
</div>
`;
